--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,7 +1,12 @@
 name: Build and deploy Mensenlinq Wordpress module
-on: [push]
+on:
+    pull_request:
+        branches: 
+            - main
+            - dev
+        types: [closed]
 jobs: 
     Explore-Github-Actions:
         runs-on: ubuntu-latest
         steps: 
-            - run: echo "Woohoo"
+            - run: Merged with Dev or Main"
